--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.vs/robustness/project-colors.json
+.vs/robustness/v17/.suo
+robustness.pyproj
+robustness.sln
